Add AUv3 support to AU loader (without ARA initially)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1298,6 +1298,7 @@ if(APPLE)
         "-framework CoreServices"
         "-framework AVFoundation"
         "-framework AudioUnit"
+        "-framework AudioToolbox"
     )
 elseif(UNIX)
     target_link_libraries(ARAPlugInHosting PUBLIC
